enhanced agents *-tech-lead and *-reliability-engineer more linting and reuse